fix: ensure single horizontal scroll on Table when sticky

--- a/src/components/data-display/Table/Table.css
+++ b/src/components/data-display/Table/Table.css
@@ -1,16 +1,3 @@
 .antd-table-override--disableStickyScroll .ant-table-sticky-scroll {
     display: none !important;
 }
-
-.antd-table-override--disableStickyScroll .ant-table-body::-webkit-scrollbar {
-    display: none;
-}
-
-.antd-table-override--disableStickyScroll .ant-table-body {
-    -ms-overflow-style: none;
-
-    /* IE and Edge */
-    scrollbar-width: none;
-
-    /* Firefox */
-}
